fix(notice): added 16px padding-left for button spacing

--- a/src/less/section-notice/base/section-notice.less
+++ b/src/less/section-notice/base/section-notice.less
@@ -80,7 +80,7 @@ span[role="region"].section-notice {
 
     .section-notice__footer {
         margin-top: 0;
-        padding-left: 0;
+        padding-left: 16px;
         width: auto;
     }
 }
